--- a/views/emptyindexreg.jade
+++ b/views/emptyindexreg.jade
@@ -212,6 +212,7 @@ head
           -webkit-appearance:none;
       }
       #welcome{
+        padding-right:74px;
         left:74px;
         width:100%;
         height:100%;
@@ -267,6 +268,10 @@ head
                 .form-group
                   label(for="exampleInputEmail1") Автор
                   input(type="email" class="form-control" id="exampleInputEmail1" placeholder="Dostoevsky F.M.")
+                .checkbox
+                  label
+                    input(type="checkbox" id='') 
+                    | Уже прочитал
                 .checkbox
                   label
                     input(type="checkbox") 
