--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -236,6 +236,10 @@ head
               input(type="email" class="form-control" id="author" placeholder="Dostoevsky F.M.")
             .checkbox
               label
+                input(type="checkbox" id='newbook' name='newbook') 
+                | Уже прочитал
+            .checkbox
+              label
                 input(type="checkbox" id='star') 
                 span(class='glyphicon glyphicon-star' style='color:#F2D45C;margin-left:10px;')
             .checkbox
@@ -256,6 +260,10 @@ head
             .form-group
               label(for="exampleInputEmail1" style='color:white;font-size:15px;') Автор
               input(type="email" class="form-control" id="exampleInputEmail1" placeholder="Dostoevsky F.M.")
+            .checkbox
+              label
+                input(type="checkbox" id='newmovie' name='newmovie') 
+                | Уже посмотрел
             .checkbox
               label
                 input(type="checkbox") 
