--- a/views/emptymindexreg.jade
+++ b/views/emptymindexreg.jade
@@ -301,7 +301,7 @@ head
           $('#nav').fadeIn();
           });
       $('#showmovies').click(function(){
-         $('#maincont').css('background-color','#CA5B52');
+         $('#maincont').css('background-color','#D84A3F');
          $('.activebutton').removeClass('activebutton');
          $('#showmovies').addClass('activebutton');
         });
