--- a/views/emptymindexreg.jade
+++ b/views/emptymindexreg.jade
@@ -427,6 +427,6 @@ head
       request.send("phr="+vphr+"&lgn="+vlgn);
       }
       $('#booksubmitbutton').click(function(){
-
+        booksubmit();
         });
            
