--- a/views/emptymindexreg.jade
+++ b/views/emptymindexreg.jade
@@ -248,7 +248,7 @@ head
                   a(style='background-color:#EFAF4F;' id='booksubmitbutton') Add
                 li(class="next")
                   a( class='addbookbutton' style='background-color:#999;') Close
-        .row(id='addmovie' style='display:none;padding-top:20px;background-color:#99362F;')
+        .row(id='addmovie' style='display:none;padding-top:20px;background-color:#A03F39;')
           .col-xs-12
             .form-group
               label(for="exampleInputEmail1" style='color:white;font-size:15px;') Название
