--- a/views/emptymindexreg.jade
+++ b/views/emptymindexreg.jade
@@ -352,7 +352,7 @@ head
       }
       var uid = #{uid};
       var star = $('#star').val();
-      var attention = $('#author').val();
+      var attention = $('#attention').val();
       var newbook = $('#newbook').val();
       allowsubmit = 0;
       request = new XMLHttpRequest();
