--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -219,7 +219,7 @@ head
             each book,q in date
               .row
                 .col-xs-12
-                  h4(class='alreadyb') #{books.booktitle}
+                  h4(class='alreadyb') #{book.booktitle}
       //.row
       //  .col-xs-12
       //    h4 #{doc}
