--- a/views/userlist.jade
+++ b/views/userlist.jade
@@ -117,6 +117,10 @@ head
                       | #{user.uid}
                     td 
                       | #{user.mail}
+                    td 
+                      | #{user.newbooks}
+                    td 
+                      | #{user.readbooks}
                     td
                       | #{user.regdate.day}.#{user.regdate.month}.#{user.regdate.year}
                     td
