--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -83,7 +83,6 @@ head
         background: #1d1d1d;
         position: fixed;
       }
-      
       .cbp-spmenu h3 {
         color: indianred;
         font-size: 1.9em;
@@ -92,19 +91,16 @@ head
         margin: 0;
         font-weight: 300;
       }
-      
       .cbp-spmenu a {
         display: block;
         color: #ddd;
         font-size: 20px;
         font-weight: 300;
       }
-      
       .cbp-spmenu a:hover {
         background: #333;
         text-decoration:none !important;
       }
-      
       .cbp-spmenu a:active {
         background: #afdefa;
         color: #47a3da;
@@ -117,7 +113,6 @@ head
         top: 0;
         z-index: 1000;
       }
-      
       .cbp-spmenu-vertical a {
         padding: 1em;
       }
@@ -132,11 +127,9 @@ head
         position: relative;
         left: 0;
       }
-      
       .cbp-spmenu-push-toright {
         left: 240px;
       }
-      
       .cbp-spmenu-push-toleft {
         left: -240px;
       }
@@ -217,10 +210,6 @@ head
             span(style='color:rgba(0, 0, 0, 0.15);') | 20
       .row
         #insert.col-xs-12
-      //.row
-      //  .col-xs-12
-      //    h4 #{doc}
-      //    h3 #{uid}
     footer(class='footer')
       .container
         .row(id='addbook' style='display:none;padding-top:20px;background-color:#378961;')
@@ -296,6 +285,7 @@ head
 
         }
        }
+       populate(dates);
       // CA5B52 for movies 99362F
       $('.addbookbutton').click(function(){
           if($('#showbooks').hasClass('activebutton'))
