--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -276,7 +276,7 @@ head
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
     script(src='/js/bootstrap.min.js')
     script.
-       var dates = #{doc};
+       var dates = !{doc};
        function populate(array) {
         for(let i in array) {
           for(let v in i){
