--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -279,7 +279,7 @@ head
        var dates = !{doc};
        function populate(array) {
         for(let i in array) {
-          for(let v in i){
+          for(let v in i.books){
             $('#insert').append("<h4 style='color:white;>"+v.booktitle+"</h4>");
           }
 
