--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -280,8 +280,8 @@ head
        dates.forEach(function(element,index,array){
            console.log(element);
            element.books.forEach(function(velement,vindex,varray){
-               console.log(velement);
-               $('#insert').append("<h4 style='color:white;>"+velement.booktitle+"</h4>");
+               console.log(velement.booktitle);
+               $('#insert').append("<h4 style='color:white;'>"+velement.booktitle+"</h4>");
             });
         });
        //function populate(array) {
