--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -276,6 +276,14 @@ head
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
     script(src='/js/bootstrap.min.js')
     script.
+       var dates = !{doc};
+       dates.forEach(function(element,index,array){
+           console.log(element);
+           element.books.forEach(function(velement,vindex,varray){
+               console.log(velement.booktitle);
+               $('#insert').append("<h4 style='color:white;'>"+velement.booktitle+"</h4>");
+            });
+        });
       // CA5B52 for movies 99362F
       $('.addbookbutton').click(function(){
           if($('#showbooks').hasClass('activebutton'))
@@ -301,7 +309,6 @@ head
          $('#showbooks').addClass('activebutton');
         });
         $('#login').click(authsubmit);
-      //populating view with books
       var counter =0;
         var menuLeft = document.getElementById( 'cbp-spmenu-s1' ),
             menuRight = document.getElementById( 'cbp-spmenu-s2' ),
