--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -273,11 +273,8 @@ head
             h1(style='color:white;font-size:40px;padding-top:10px;padding-bottom:10px;margin-top:0px;margin-bottom:0px;') M
           .col-xs-3
             span(class='glyphicon glyphicon-align-justify ' id='showLeft' style='color:white;font-size:30px;padding-top:13px;')
-    script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
-    script(src='/js/bootstrap.min.js')
     script.
-      // CA5B52 for movies 99362F
-       var dates = !{doc};
+      var dates = !{doc};
        dates.forEach(function(element,index,array){
            console.log(element);
            element.books.forEach(function(velement,vindex,varray){
@@ -285,6 +282,10 @@ head
                $('#insert').append("<h4 style='color:white;'>"+velement.booktitle+"</h4>");
             });
         });
+    script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
+    script(src='/js/bootstrap.min.js')
+    script.
+      // CA5B52 for movies 99362F
       $('.addbookbutton').click(function(){
           if($('#showbooks').hasClass('activebutton'))
           {$('#addbook').slideToggle();}
