--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -378,7 +378,7 @@ head
       request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
       //Most libraries like jQuery/Prototype/Dojo do this
       console.log("author="+author+"&booktitle="+booktitle+"&star="+star+"&attention="+attention);
-      request.send("author="+author+"&booktitle="+booktitle+"&star="+star+"&attention="+attention+"&uid="uid);
+      request.send("author="+author+"&booktitle="+booktitle+"&star="+star+"&attention="+attention+"&uid="+uid);
       }
       
       // AUTHSUBMIT FUNCTION
