--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -280,7 +280,7 @@ head
     script(src='/js/bootstrap.min.js')
     script.
       var bookdates = !{bookdoc};
-      var moviedates = !{moviedoc};
+      //var moviedates = !{moviedoc};
       function populate (array,target)
        {
         if(array){array.forEach(function(element,index,array){
@@ -295,7 +295,7 @@ head
         }
      }
       populate(bookdates,'#bookinsert');
-      populate(moviedates,'#movieinsert');
+      //populate(moviedates,'#movieinsert');
       // CA5B52 for movies 99362F
       $('.addbookbutton').click(function(){
           if($('#showbooks').hasClass('activebutton'))
