--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -291,7 +291,7 @@ head
                            });
                        });}
         else{
-          return 0
+          return 0;
         }
      }
       populate(bookdates,'#bookinsert');
