--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -224,15 +224,15 @@ head
               input(type="email" class="form-control" id="author" placeholder="Dostoevsky F.M.")
             .checkbox
               label
-                input(type="checkbox" id='newbook' name='newbook') 
+                input(type="checkbox" id='newbook' name='newbook' value='1') 
                 | Уже прочитал
             .checkbox
               label
-                input(type="checkbox" id='star') 
+                input(type="checkbox" id='star' value='1') 
                 span(class='glyphicon glyphicon-star' style='color:#F2D45C;margin-left:10px;')
             .checkbox
               label
-                input(type="checkbox" id='attention') 
+                input(type="checkbox" id='attention' value='1') 
                 span(class='glyphicon glyphicon-exclamation-sign' style='color:rgba(255, 255, 255, 0.65);margin-left:10px;')
             nav
               ul(class="pager")
@@ -250,15 +250,15 @@ head
               input(type="email" class="form-control" id="exampleInputEmail1" placeholder="Dostoevsky F.M.")
             .checkbox
               label
-                input(type="checkbox" id='newmovie' name='newmovie') 
+                input(type="checkbox" id='newmovie' name='newmovie' value='1') 
                 | Уже посмотрел
             .checkbox
               label
-                input(type="checkbox") 
+                input(type="checkbox" value='1') 
                 span(class='glyphicon glyphicon-star' style='color:#F2D45C;margin-left:10px;')
             .checkbox
               label
-                input(type="checkbox") 
+                input(type="checkbox" value='1') 
                 span(class='glyphicon glyphicon-exclamation-sign' style='color:rgba(255, 255, 255, 0.65);margin-left:10px;')
             nav
               ul(class="pager")
@@ -362,6 +362,7 @@ head
       var uid = #{uid};
       var star = $('#star').val();
       var attention = $('#author').val();
+      var newbook = $('#newbook').val();
       allowsubmit = 0;
       request = new XMLHttpRequest();
       request.onreadystatechange = function () {
@@ -377,7 +378,21 @@ head
       allowsubmit=1;
       }
       else {
-      window.location = 'http://m.peopleandbooks.com';
+      var bookclass = 'yet';
+      var insert = "<h4 class='"+bookclass+"'' style='color:white;'>"+booktitle+"</h4>";
+      if(newbook!='on')
+      {
+       bookclass='alreadyb'
+      }
+      if(star!='on'&&newbook!='on'){
+        insert+="<span style='color:#F2D45C;margin-left:10px;' class='glyphicon glyphicon-star'></span>";
+      }
+      if(attention!='on'&&newbook==='on'){
+        insert+="<span style='color:rgba(255, 255, 255, 0.65);margin-left:10px;' class='glyphicon glyphicon-exclamation-sign'></span>";
+      }
+      $(insert).prependTo('#bookinsert').hide().slideDown();
+      allowsubmit=1;
+      //window.location = 'http://m.peopleandbooks.com';
       }
       }
       };
@@ -386,7 +401,7 @@ head
       request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
       //Most libraries like jQuery/Prototype/Dojo do this
       console.log("author="+author+"&booktitle="+booktitle+"&star="+star+"&attention="+attention);
-      request.send("author="+author+"&booktitle="+booktitle+"&star="+star+"&attention="+attention+"&uid="+uid);
+      request.send("author="+author+"&booktitle="+booktitle+"&star="+star+"&attention="+attention+"&uid="+uid+"&newbook"+newbook);
       }
       
       // AUTHSUBMIT FUNCTION
