--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -240,17 +240,21 @@ head
             .col-xs-12
               .form-group
                 label(for="exampleInputEmail1") Название
-                input(type="email" class="form-control" id="exampleInputEmail1" placeholder="Crime and punishment")
+                input(type="email" class="form-control" id="booktitle" placeholder="Crime and punishment")
               .form-group
                 label(for="exampleInputEmail1") Автор
-                input(type="email" class="form-control" id="exampleInputEmail1" placeholder="Dostoevsky F.M.")
+                input(type="email" class="form-control" id="author" placeholder="Dostoevsky F.M.")
               .checkbox
                 label
-                  input(type="checkbox") 
+                  input(type="checkbox" id='newbook') 
+                  | Уже прочитал
+              .checkbox
+                label
+                  input(type="checkbox" id='star') 
                   span(class='glyphicon glyphicon-star' style='color:#F2D45C;margin-left:10px;')
               .checkbox
                 label
-                  input(type="checkbox") 
+                  input(type="checkbox" id='attention') 
                   span(class='glyphicon glyphicon-exclamation-sign' style='color:rgba(255, 255, 255, 0.65);margin-left:10px;')
               nav
                 ul(class="pager")
@@ -259,7 +263,7 @@ head
                   li(class="next")
                     a( class='addbookbutton' style='background-color:#999;') Close
           .row
-            #insertbooks.col-xs-12
+            #bookinsert.col-xs-12
         .col-xs-6(id='movies' style='background-color:rgba(0, 0, 0, 0.1);height:100%;overflow:auto;')
           .row
             .col-xs-12(style='text-align:center;')
@@ -276,7 +280,7 @@ head
                 input(type="email" class="form-control" id="exampleInputEmail1" placeholder="2007")
               .checkbox
                 label
-                  input(type="checkbox") 
+                  input(type="checkbox" id='newmovie') 
                   | Уже посмотрел
               .checkbox
                 label
@@ -293,7 +297,7 @@ head
                   li(class="next")
                     a( class='addmoviebutton' style='background-color:#999;') Close
           .row
-            #insermovies.col-xs-12
+            #moviesinsert.col-xs-12
       script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
       script(async src='/js/bootstrap.min.js')
       script.
@@ -336,6 +340,66 @@ head
                         break;
                       }
         };
-        
+        var allowsubmit = 1;
+        function booksubmit() {
+        if(!allowsubmit) {
+          return
+        }
+        var author = $('#author').val();
+        if(!author){
+          author='--';
+        }
+        var booktitle = $('#booktitle').val();
+        if(!booktitle) {
+          alert('Specify book title');
+          allowsubmit=1;
+          return
+        }
+        var uid = #{uid};
+        var star = $('#star').val();
+        var attention = $('#author').val();
+        var newbook = $('#newbook').val();
+        allowsubmit = 0;
+        request = new XMLHttpRequest();
+        request.onreadystatechange = function () {
+        var DONE = this.DONE || 4;
+        if (this.readyState === DONE){
+        var index;
+        parsed = JSON.parse(request.responseText);
+        console.log(parsed);
+        if(parsed.trouble === 1)
+        {
+        console.log('TROUBLE === 1');
+        alert('Server is down, try again later.')
+        allowsubmit=1;
+        }
+        else {
+        var bookclass = 'yet';
+        var insert = "<h4 class='"+bookclass+"'' style='color:white;'>"+booktitle+"</h4>";
+        if(newbook!='on')
+        {
+         bookclass='alreadyb'
+        }
+        if(star!='on'&&newbook!='on'){
+          insert+="<span style='color:#F2D45C;margin-left:10px;' class='glyphicon glyphicon-star'></span>";
+        }
+        if(attention!='on'&&newbook==='on'){
+          insert+="<span style='color:rgba(255, 255, 255, 0.65);margin-left:10px;' class='glyphicon glyphicon-exclamation-sign'></span>";
+        }
+        $(insert).prependTo('#bookinsert').hide().slideDown();
+        allowsubmit=1;
+        //window.location = 'http://m.peopleandbooks.com';
+        }
+        }
+        };
+        request.open('POST', '/addbook', true);
+        request.setRequestHeader('X-Requested-With', 'XMLHttpRequest');  // Tells server that this call is made for ajax purposes.
+        request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+        //Most libraries like jQuery/Prototype/Dojo do this
+        console.log("author="+author+"&booktitle="+booktitle+"&star="+star+"&attention="+attention);
+        request.send("author="+author+"&booktitle="+booktitle+"&star="+star+"&attention="+attention+"&uid="+uid+"&newbook"+newbook);
+        }
+        $('#booksubmitbutton').click(booksubmit(););
+      
         
       
