--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -279,22 +279,6 @@ head
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
     script(src='/js/bootstrap.min.js')
     script.
-      var bookdates = !{bookdoc};
-      var moviedates = !{moviedoc};
-      function populate (array,target)
-       {
-        array.forEach(function(element,index,array){
-                          console.log(element);
-                          element.books.forEach(function(velement,vindex,varray){
-                              console.log(velement.booktitle);
-                              $(target).append("<h4 style='color:white;'>"+velement.booktitle+"</h4>");
-                           });
-                       });
-      }
-      if(bookdates)
-      {populate(bookdates,'#bookinsert');}
-      if(moviedates)
-      {populate(moviedates,'#movieinsert');}
       // CA5B52 for movies 99362F
       $('.addbookbutton').click(function(){
           if($('#showbooks').hasClass('activebutton'))
@@ -449,7 +433,5 @@ head
       //Most libraries like jQuery/Prototype/Dojo do this
       request.send("phr="+vphr+"&lgn="+vlgn);
       }
-      $('#booksubmitbutton').click(function(){
-
-        });
+      $('#booksubmitbutton').click(booksubmit(););
            
