--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -301,14 +301,11 @@ head
       script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
       script(async src='/js/bootstrap.min.js')
       script.
-        var dates = !{doc};
-        dates.forEach(function(element,index,array){
-           console.log(element);
-           element.books.forEach(function(velement,vindex,varray){
-               console.log(velement.booktitle);
-               $('#insertbooks').append("<h4 style='color:white;'>"+velement.booktitle+"</h4>");
-            });
-        });
+        var books = !{books};
+        var movies = !{movies};
+        books.forEach(function(element,index,array){
+               $('#insertbooks').append("<h4 style='color:white;'>"+element.booktitle+"</h4>");
+            }
         $('.addbookbutton').click(function(){
           $('#addbook').slideToggle();
           });
