--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -259,7 +259,7 @@ head
               nav
                 ul(class="pager")
                   li(class="previous")
-                    a(style='background-color:#EFAF4F;') Add
+                    a(style='background-color:#EFAF4F;' id='booksubmitbutton') Add
                   li(class="next")
                     a( class='addbookbutton' style='background-color:#999;') Close
           .row
@@ -293,7 +293,7 @@ head
               nav
                 ul(class="pager")
                   li(class="previous")
-                    a(style='background-color:#EFAF4F;') Add
+                    a(style='background-color:#EFAF4F;' id='moviesubmitbutton') Add
                   li(class="next")
                     a( class='addmoviebutton' style='background-color:#999;') Close
           .row
