--- a/views/emptymindexreg.jade
+++ b/views/emptymindexreg.jade
@@ -213,13 +213,17 @@ head
     .container( id='maincont' style='background-color:#52CA8F;overflow:auto;height:100%;padding-left:20px;padding-right:0px;padding-bottom:74px;')
       .row
         .col-xs-12(style='text-align:center;')
-          h1(style='font-family:high;font-size:100px;font-weight:bold;color:white;padding-right:20px;') 0 
-            span(style='color:rgba(0, 0, 0, 0.15);') | 0
-      .row(style='text-align:center;padding-right:20px;')
+          h1( id='newbooks' style='font-family:high;font-size:100px;font-weight:bold;color:white;padding-right:20px;') 0 
+            span(id ='readbooks' style='color:rgba(0, 0, 0, 0.15);') | 0
+      #welcome.row(style='text-align:center;padding-right:20px;')
         .col-xs-12
           h2 Welcome !
           h3 Add a book by touching + at the bottom of the screen
           //add a smile here or something
+      #showbooks.row(style='display:none;')
+        #bookinsert.col-xs-12
+      #showmovies.row(style='display:none;')
+        #bookinsert.col-xs-12
     footer(class='footer')
       .container
         .row(id='addbook' style='display:none;padding-top:20px;background-color:#378961;')
@@ -369,7 +373,22 @@ head
       allowsubmit=1;
       }
       else {
-      window.location = 'http://m.peopleandbooks.com';
+      var bookclass = 'yet';
+      var insert = "<h4 class='"+bookclass+"'' style='color:white;'>"+booktitle+"</h4>";
+      if(newbook!='on')
+      {
+       bookclass='alreadyb'
+      }
+      if(star!='on'&&newbook!='on'){
+        insert+="<span style='color:#F2D45C;margin-left:10px;' class='glyphicon glyphicon-star'></span>";
+      }
+      if(attention!='on'&&newbook==='on'){
+        insert+="<span style='color:rgba(255, 255, 255, 0.65);margin-left:10px;' class='glyphicon glyphicon-exclamation-sign'></span>";
+      }
+      $('#welcome').fadeOut();
+      $('#showbooks').slideToggle();
+      $(insert).prependTo('#bookinsert').hide().slideDown();
+      allowsubmit=1;
       }
       }
       };
