--- a/views/emptymindexreg.jade
+++ b/views/emptymindexreg.jade
@@ -387,6 +387,15 @@ head
       }
       $('#welcome').fadeOut();
       $('#showbooks').slideToggle();
+      if(newbook!='on')
+      {var newbooks = parseInt($('#newbooks').text(););
+            newbooks++;
+            $('#newbooks').text(newbooks);}
+      else {
+        var readbooks = parseInt($('#readbooks').text(););
+            readbooks++;
+            $('#readbooks').text(readbooks);
+      }
       $(insert).prependTo('#bookinsert').hide().slideDown();
       allowsubmit=1;
       }
