--- a/views/emptymindexreg.jade
+++ b/views/emptymindexreg.jade
@@ -388,11 +388,11 @@ head
       $('#welcome').fadeOut();
       $('#showbooks').slideToggle();
       if(newbook!='on')
-      {var newbooks = parseInt($('#newbooks').text(););
+      {var newbooks = parseInt($('#newbooks').text());
             newbooks++;
             $('#newbooks').text(newbooks);}
       else {
-        var readbooks = parseInt($('#readbooks').text(););
+        var readbooks = parseInt($('#readbooks').text());
             readbooks++;
             $('#readbooks').text(readbooks);
       }
