--- a/views/emptymindexreg.jade
+++ b/views/emptymindexreg.jade
@@ -220,9 +220,9 @@ head
           h2 Welcome !
           h3 Add a book by touching + at the bottom of the screen
           //add a smile here or something
-      #showbooks.row(style='display:none;')
+      #booksrow.row(style='display:none;')
         #bookinsert.col-xs-12
-      #showmovies.row(style='display:none;')
+      #moviesrow.row(style='display:none;')
         #bookinsert.col-xs-12
     footer(class='footer')
       .container
@@ -296,9 +296,6 @@ head
           {$('#addbook').slideToggle();}
           else
             {$('#addmovie').slideToggle();}
-          });
-        $('.addmoviebutton').click(function(){
-          $('#addmovie').slideToggle();
           });
       $('#shownav').click(function(){
           $('#shownav').fadeOut();
@@ -386,7 +383,7 @@ head
         insert+="<span style='color:rgba(255, 255, 255, 0.65);margin-left:10px;' class='glyphicon glyphicon-exclamation-sign'></span>";
       }
       $('#welcome').fadeOut();
-      $('#showbooks').slideToggle();
+      $('#booksrow').slideToggle();
       if(newbook!='on')
       {var newbooks = parseInt($('#newbooks').text());
             newbooks++;
