--- a/views/emptyindexreg.jade
+++ b/views/emptyindexreg.jade
@@ -419,6 +419,6 @@ head
         console.log("author="+author+"&booktitle="+booktitle+"&star="+star+"&attention="+attention);
         request.send("author="+author+"&booktitle="+booktitle+"&star="+star+"&attention="+attention+"&uid="+uid+"&newbook"+newbook);
         }
-        $('#booksubmitbutton').click(booksubmit(););
+        $('#booksubmitbutton').click(booksubmit());
         
       
