--- a/views/emptyindexreg.jade
+++ b/views/emptyindexreg.jade
@@ -394,6 +394,7 @@ head
         allowsubmit=1;
         }
         else {
+        $('#addbook').slideToggle();
         var bookclass = 'yet';
         var insert = "<h4 class='"+bookclass+"'' style='color:white;'>"+booktitle+"</h4>";
         if(newbook!='on')
