--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -206,7 +206,7 @@ head
     .container( id='maincont' style='background-color:#52CA8F;overflow:auto;height:100%;padding-left:20px;padding-right:0px;padding-bottom:74px;')
       .row
         .col-xs-12(style='text-align:center;')
-          h1(id='newbooks' style='font-family:high;font-size:100px;font-weight:bold;color:white;') #{newbooks} 
+          h1(id='newbooks' style='font-family:high;font-size:100px;font-weight:bold;color:white;padding-right:20px;') #{newbooks} 
             span(id='readbooks' style='color:rgba(0, 0, 0, 0.15);') | #{readbooks}
       #showbooks.row
         #bookinsert.col-xs-12
