--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -279,8 +279,8 @@ head
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
     script(src='/js/bootstrap.min.js')
     script.
-      var books = !{books};
-      var movies = !{movies};
+      var books = #{books};
+      var movies = #{movies};
       books.forEach(function(element,index,array){
          $('#insertbooks').append("<h4 style='color:white;'>"+element.booktitle+"</h4>");
       }
