--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -279,11 +279,11 @@ head
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
     script(src='/js/bootstrap.min.js')
     script.
-      var books = !{books};
-      var movies = !{movies};
-      books.forEach(function(element,index,array){
-         $('#insertbooks').append("<h4 style='color:white;'>"+element.booktitle+"</h4>");
-      };
+      //var books = !{books};
+      //var movies = !{movies};
+      //books.forEach(function(element,index,array){
+      //   $('#insertbooks').append("<h4 style='color:white;'>"+element.booktitle+"</h4>");
+      //}
       // CA5B52 for movies 99362F
       $('.addbookbutton').click(function(){
           if($('#showbooks').hasClass('activebutton'))
