--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -438,5 +438,5 @@ head
       //Most libraries like jQuery/Prototype/Dojo do this
       request.send("phr="+vphr+"&lgn="+vlgn);
       }
-      $('#booksubmitbutton').click(booksubmit;
+      $('#booksubmitbutton').click(booksubmit);
            
