--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -281,7 +281,7 @@ head
     script.
       var books = !{books};
       //var movies = !{movies};
-      books.forEach(function(element,index,array){$('#insertbooks').append("<h4 style='color:white;'>"+element.booktitle+"</h4>");};
+      books.forEach(function(element,index,array){$('#insertbooks').append("<h4 style='color:white;'>"+element.booktitle+"</h4>");}
       // CA5B52 for movies 99362F
       $('.addbookbutton').click(function(){
           if($('#showbooks').hasClass('activebutton'))
