--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -396,7 +396,7 @@ head
         console.log("author="+author+"&booktitle="+booktitle+"&star="+star+"&attention="+attention);
         request.send("author="+author+"&booktitle="+booktitle+"&star="+star+"&attention="+attention+"&uid="+uid+"&newbook"+newbook);
         }
-        $('#booksubmitbutton').click(booksubmit(););
+        $('#booksubmitbutton').click(booksubmit);
       
         
       
