--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -304,7 +304,7 @@ head
         var books = !{books};
         var movies = !{movies};
         books.forEach(function(element,index,array){
-               $('#insertbooks').append("<h4 style='color:white;'>"+element.booktitle+"</h4>");
+               $('#bookinsert').append("<h4 style='color:white;'>"+element.booktitle+"</h4>");
             });
         $('.addbookbutton').click(function(){
           $('#addbook').slideToggle();
